fix: alignment on dashboard

--- a/src/assets/styles/dashboard.scss
+++ b/src/assets/styles/dashboard.scss
@@ -100,6 +100,7 @@
       grid-template-columns: repeat(auto-fit, 120px);
       gap: 60px;
       text-align: center;
+      justify-content: center;
 
       @media (max-width: 800px) {
         row-gap: 30px;
